--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,8 @@ nav li{
 
 .about-section{
   min-height: 626px;
-  background: fafafa;
+  background: #fafafa;
+  overflow: auto;
 }
 
 .container{
@@ -146,11 +147,10 @@ nav li{
 }
 
 .green-title{
-    font-family: Intro;
+/*    font-family: Intro;*/
     text-align: center;
     color: green;
-    margin-top: 0px;
-    padding-top: 55px;
+    margin-top: 55px;
     font-size: 38px;
 }
 
@@ -188,12 +188,104 @@ nav li{
     background-size:cover;
     background-position: center center;
     background-repeat: no-repeat;
+    overflow: auto;
 }
 
 
 .btn-go{
     font-size: 18px;
-    margin: 20px 0px 0px 25px;
+    padding: 20px 0px 0px 25px;
     width: 354.38px;
     background: white;
+}
+
+.list{
+    width: 504px;
+    height: 61px;
+    font-size: 23px;
+    margin-left: 200px;
+    font-family: Roboto-Regular;
+}
+
+.city{
+   text-align: center;
+}
+
+.login-section{
+  min-height: 571px;
+  background: #e94841;
+  overflow: hidden;
+}
+
+.form-style{
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.form-control{
+  display: block;
+  width: 100%;
+  height: 53px;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom:1px #e6e6e6 solid;
+  background: #e94841;
+  text-align: left;
+  color: white;
+  text-decoration: none;
+  margin-top: 30px;
+  font-family: Roboto-Regular;
+  font-size: 22px;
+}
+
+  .form-control:active {
+    border: none;
+  }
+
+input[type="text"]:focus { outline: none; }
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color:#ffffff;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color:#ffffff;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color:#ffffff;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color:#ffffff;
+}
+
+.password{
+  float: right;
+}
+
+.check-btns{
+  margin:50px 0px 50px 0px;
+}
+
+.login-button{
+    border-radius: 10px;
+    border: 2px solid #fff;
+    background: #fff;
+    text-decoration: none;
+    color: red;
+    padding: 10px 50px 10px 50px;
+    font-weight: bold;
+    font-family: Roboto-Regular;
+}
+
+.login-button:hover{
+
+    border: 2px solid #fff;
+    background:red ;
+    text-decoration: none;
+    color: #fff;
+}
+
+.btn-center{
+  text-align: center;
 }
