--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 }
 
 
+
 /* start commented backslash hack \*/
 
 * html .clearfix {
@@ -25,6 +26,7 @@
 .clearfix {
     display: block;
 }
+
 
 
 /* close commented backslash hack */
@@ -192,8 +194,8 @@ nav li {
 }
 
 .about-col-des {
-    padding-top: 70px;
-    font-style: 23px;
+    padding: 20px 0px;
+    font-size: 23px;
 }
 
 .search-section {
@@ -283,6 +285,7 @@ input[type="text"]:focus {
 
 .password {
     float: right;
+    text-decoration: underline;
 }
 
 .check-btns {
@@ -311,6 +314,10 @@ input[type="text"]:focus {
 
 .btn-center {
     text-align: center;
+}
+
+.btn-description {
+    color: white;
 }
 
 
@@ -364,14 +371,16 @@ input[type="text"]:focus {
 }
 
 
+
 /* end .squaredThree */
 
 .remem-padding {
     padding-left: 10px;
 }
 
-.underline {
+.link-sign {
     text-decoration: underline;
+    padding-left: 20px;
 }
 
 .footer {
@@ -379,6 +388,12 @@ input[type="text"]:focus {
     background: #3d3d3d;
     overflow: hidden;
 }
+
+.footer-desc {
+    color: white;
+    padding-left: 10px;
+}
+
 
 .styled-select {
     background: url(../img/icon.jpg) no-repeat 96% 0;
@@ -465,7 +480,6 @@ input[type="text"]:focus {
 
 .nav-right.visible-xs {
     z-index: 3;
-    /*  display: none;*/
 }
 
 .hidden-xs {
@@ -520,6 +534,7 @@ input[type="text"]:focus {
     -o-transform: translateX(-400px);
     transform: translateX(-400px);
 }
+
 
 
 /*nav {
@@ -654,13 +669,7 @@ input[type="text"]:focus {
     .nav-right {
         position: absolute;
     }
-    /*  .hidden-xs {
-    display: block;
-  }
-*/
-    /*  .visible-xs {
-    display: none;
-  }*/
+
     .button {
         display: none;
     }
@@ -692,10 +701,10 @@ input[type="text"]:focus {
 @media (max-width:769px) {
     .baner-title {
         font-size: 35px;
-        margin-left: 50px;
+        margin-left: 40px;
     }
     .started-btn {
-        margin-left: 50px;
+        margin-left: 40px;
     }
     .about-col {
         float: none;
@@ -707,9 +716,29 @@ input[type="text"]:focus {
     .styled-select.slate select {
         width: 240px;
     }
+    .check-btns {
+        text-align: center;
+    }
+
     .password {
         float: none;
-        display: block;
         margin-top: 20px;
+        display: block;
+    }
+    input[type="text"] {
+        font-size: 18px;
+    }
+}
+
+
+@media (max-width:480px) {
+    .form-style {
+        width: 90%;
+    }
+    .sidebar {
+        width: 100%;
+    }
+    .link-sign {
+        padding-left: 5px;
     }
 }
